@@ -1,3 +1,8 @@
+2001-06-02  Martin Baulig  <baulig@suse.de>
+
+	* libgnome-init.c (gnome_mime_type): Add this here until bonobo-moniker-extender-file.c
+	is fixed. You will be killed if you use this function !
+
 2001-06-01  Martin Baulig  <baulig@suse.de>
 
 	* gnome-selector.c (PROP_PBAG_MAX_HISTORY_LINES): Implemented.
